[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Bullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 0.224587, 0.224587 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="BulletLife" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="BulletLife" to="." method="_on_BulletLife_timeout"]
